--- a/style.css
+++ b/style.css
@@ -69,14 +69,14 @@ nav.navbar a:active {
   color: #4aa3ff;
   background: rgba(74, 163, 255, 0.15);
   box-shadow: 0 0 10px #4aa3ffaa;
-  font-weight: 700;
+  font-weight: 700px;
 }
 
 nav.navbar a:hover{
   color: #4aa3ff;
   background: rgba(74, 163, 255, 0.15);
   box-shadow: 0 0 10px #4aa3ffaa;
-  font-weight: 700;
+  font-weight: 700px;
 }
 
 
