--- a/style.css
+++ b/style.css
@@ -393,6 +393,21 @@ nav.navbar a:hover{
   #contacts .contact-item i {
     font-size: 1.1rem;
   }
+
+   .school-logo {
+  width: 120px;
+  height: 120px;
+  margin: 10px auto;
+  display: block;
+}
+
+#education ul li,
+#trainings ul li {
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
     }
 
     /* Education Section Specific Styles */
