--- a/assets/style.css
+++ b/assets/style.css
@@ -236,9 +236,9 @@ body {
 }
 
 .intro-image img {
-  max-width: 90%; /* Limit the max width */
+  max-width: 50%; /* Limit the max width to make it smaller */
   height: auto;
-  border-radius: 50%; /* Make the image circular */
+  border-radius: 50%; /* Keep the image circular */
   box-shadow: 0 10px 25px rgba(80, 65, 35, 0.1); /* Subtle shadow */
   transition: transform 0.5s ease, box-shadow 0.3s ease; /* Smooth hover effect */
   border: 6px solid transparent; /* Initially transparent border */
@@ -246,6 +246,7 @@ body {
   background-origin: border-box;
   background-clip: content-box; /* Keeps the border and the image separate */
 }
+
 
 .intro-image img:hover {
   transform: scale(1.05); /* Slight zoom effect on hover */
