--- a/assets/style.css
+++ b/assets/style.css
@@ -915,6 +915,32 @@ section:hover {
   border-bottom-color: #7a654a; /* Underline the text */
 }
 
+.navbar a.active {
+  font-weight: bold;
+  position: relative;
+  transition: all 0.3s ease-in-out;
+}
+
+.navbar a.active::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: #000;
+  bottom: -4px;
+  left: 0;
+  animation: underline-slide 0.3s ease-in-out forwards;
+}
+
+@keyframes underline-slide {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
 /* Hover effect for sections */
 section.hovered {
   transform: scale(1.05); /* Slight zoom effect */
