--- a/assets/style.css
+++ b/assets/style.css
@@ -962,7 +962,7 @@ section.visible {
 /* Active nav link */
 .navbar a.active {
   font-weight: bold;
-  color: #007bff;
+  color: black;
 }
 
 /* Section Hover effect */
