--- a/assets/style.css
+++ b/assets/style.css
@@ -932,6 +932,34 @@ section:hover {
   animation: underline-slide 0.3s ease-in-out forwards;
 }
 
+.navbar a.active {
+  font-weight: bold;
+  color: #7a654a;
+  position: relative;
+  transition: all 0.3s ease-in-out;
+}
+
+.navbar a.active::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: #7a654a;
+  bottom: -4px;
+  left: 0;
+  animation: underline-slide 0.3s ease-in-out forwards;
+}
+
+@keyframes underline-slide {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+
 @keyframes underline-slide {
   from {
     width: 0;
